--- a/3. GRID VS FLEX/grid.html
+++ b/3. GRID VS FLEX/grid.html
@@ -12,17 +12,17 @@
 <section class="cards">
 
     <div class="one-row">
-        <div class="card__container">
+        <div class="card__container card-1">
             <h4 class="card__title"> Карточка 1</h4>
             <p>содержимое карточки 1</p>
         </div>
 
-        <div class="card__container">
+        <div class="card__container card-2">
             <h4 class="card__title"> Карточка 2</h4>
             <p>содержимое карточки 2</p>
         </div>
 
-        <div class="card-3 card__container">
+        <div class="card-3 card__container card-3">
             <h4 class="card__title"> Карточка 3</h4>
             <p>содержимое карточки 3</p>
         </div>
