--- a/4. BEM/bem.html
+++ b/4. BEM/bem.html
@@ -10,12 +10,64 @@
 </head>
 <body>
 <section class="container__about">
-<!--    <div class="about">-->
+
     <h1 class="title__about">ABOUT</h1>
     <div class="line__about"></div>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-<!--    </div>-->
-</section>
+    <p class="description__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+        incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
 
+    <div>
+        <div class="layout-3-columns">
+
+            <div class="web__about card">
+                <figure>
+                    <div class="img__wrapper">
+                        <img src="../image/window.svg"
+                             alt="Значок веб">
+                    </div>
+                    <figcaption>
+                        <h3>WEB</h3>
+                    </figcaption>
+                </figure>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore.
+                </p>
+            </div>
+
+            <div class="android__about card">
+                <figure>
+                    <div class="img__wrapper">
+                        <img src="../image/phone.svg"
+                             alt="Значок телефона">
+                    </div>
+                    <figcaption>
+                        <h3>IOS AND ANDROID</h3>
+                    </figcaption>
+                </figure>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore.
+                </p>
+            </div>
+
+            <div class="marketing__about card">
+                <figure>
+                    <div class="img__wrapper">
+                        <img src="../image/arrowBEM.svg"
+                             alt="Значок маркетинга">
+                    </div>
+                    <figcaption>
+                        <h3>MARKETING</h3>
+                    </figcaption>
+                </figure>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore.
+                </p>
+            </div>
+
+        </div>
+    </div>
+
+</section>
 </body>
 </html>
