--- a/4. BEM/bem.html
+++ b/4. BEM/bem.html
@@ -12,7 +12,8 @@
 <section class="container__about">
 
     <h1 class="title__about">ABOUT</h1>
-    <div class="line__about"></div>
+    <div class="line__dark"></div>
+
     <p class="description__about">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
         incididunt ut labore et dolore
         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
@@ -30,10 +31,13 @@
                         <h3>WEB</h3>
                     </figcaption>
                 </figure>
+
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore.
                 </p>
             </div>
+            <hr size="2"/>
+
 
             <div class="android__about card">
                 <figure>
@@ -49,6 +53,8 @@
                     et dolore.
                 </p>
             </div>
+
+            <hr size="2"/>
 
             <div class="marketing__about card">
                 <figure>
