--- a/1. BUTTON UP/buttonUp.html
+++ b/1. BUTTON UP/buttonUp.html
@@ -686,13 +686,9 @@
 
     Бургомистр. Нет, я не понимаю вас. Кто вас просит драться с ним?</p>
 
-<div class="arrowUp__container">
-    <a href="#top">
-        <div class="arrowUp">
-            <img src="../image/upArrow.png" alt="стрелка, которая пролистывает текст в начало">
-        </div>
-    </a>
-</div>
+<a href="#top" class="arrowUp">
+    <img src="../image/upArrow.png" alt="стрелка, которая пролистывает текст в начало">
+</a>
 
 </body>
 </html>
