--- a/2. TOOLTIP/tooltip.html
+++ b/2. TOOLTIP/tooltip.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="tooltip.css">
 </head>
 <body>
+
 <div class="hint__container">
-    <div>
-        <button data-hint="Ваша подсказка здесь">Наведите для подсказки</button>
-    </div>
+    <span data-hint="Ваша подсказка здесь">Наведите для подсказки</span>
 </div>
+
 </body>
 </html>
