--- a/4. BEM/bem.html
+++ b/4. BEM/bem.html
@@ -36,7 +36,9 @@
                     et dolore.
                 </p>
             </div>
-            <hr size="2"/>
+            <div class="as">
+                <hr  size="2"/>
+            </div>
 
 
             <div class="android__about card">
