fix 4 task - BEM

--- a/4. BEM/bem.html
+++ b/4. BEM/bem.html
@@ -18,62 +18,51 @@
         incididunt ut labore et dolore
         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
 
-    <div>
-        <div class="layout-3-columns">
+    <div class="layout_three-columns">
 
-            <div class="web__about card">
-                <figure>
-                    <div class="img__wrapper">
-                        <img src="../image/window.svg"
-                             alt="Значок веб">
-                    </div>
-                    <figcaption>
-                        <h3>WEB</h3>
-                    </figcaption>
-                </figure>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore.
-                </p>
+        <div class="web__about card">
+            <div class="card__wrapper">
+                <div class="img__wrapper">
+                    <img src="../image/window.svg"
+                         alt="Значок веб">
+                </div>
+                <h3>WEB</h3>
             </div>
-            <div class="as">
-                <hr  size="2"/>
-            </div>
-
-
-            <div class="android__about card">
-                <figure>
-                    <div class="img__wrapper">
-                        <img src="../image/phone.svg"
-                             alt="Значок телефона">
-                    </div>
-                    <figcaption>
-                        <h3>IOS AND ANDROID</h3>
-                    </figcaption>
-                </figure>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore.
-                </p>
-            </div>
-
-            <hr size="2"/>
-
-            <div class="marketing__about card">
-                <figure>
-                    <div class="img__wrapper">
-                        <img src="../image/arrowBEM.svg"
-                             alt="Значок маркетинга">
-                    </div>
-                    <figcaption>
-                        <h3>MARKETING</h3>
-                    </figcaption>
-                </figure>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore.
-                </p>
-            </div>
-
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore.
+            </p>
         </div>
+
+        <hr size="2"/>
+
+        <div class="android__about card">
+            <div class="card__wrapper">
+                <div class="img__wrapper">
+                    <img src="../image/phone.svg"
+                         alt="Значок телефона">
+                </div>
+                <h3>IOS AND ANDROID</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore.
+            </p>
+        </div>
+
+        <hr size="2"/>
+
+        <div class="marketing__about card">
+            <div class="card__wrapper">
+                <div class="img__wrapper">
+                    <img src="../image/arrowBEM.svg"
+                         alt="Значок маркетинга">
+                </div>
+                <h3>MARKETING</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore.
+            </p>
+        </div>
+
     </div>
 
 </section>
